# CMakeSeries

./: README.md
Ep002/source/: CMakeLists.txt  main.cpp
Ep005/source/: CMakeLists.txt  main.cpp
Ep005/source/include/: dog.h
Ep005/source/src/: operation.cpp
Ep007/source/: CMakeLists.txt  main.cpp
Ep007/source/logger/include/: log.h
Ep007/source/logger/src/: log.cpp
Ep007/source/src/: dog.cpp  log.cpp  operations.cpp
Ep008/: CMakeLists.txt
Ep009/: CMakeLists.txt
Ep009/src/math/: math.cmake  supermath.cpp
Ep009/src/stats/: stats.cmake
Ep010/: CMakeLists.txt
Ep010/src/: main.cpp
Ep010/src/math/: CMakeLists.txt
Ep010/src/stats/: CMakeLists.txt  stats.cpp
Ep011/: 1-message.cmake  2-variable.cmake  3-list.cmake  4-flow_control.cmake  5-loops.cmake  6-functions.cmake
